2010-09-09 - 0.0.25 - Nils K. Windisch <windisch@sub.uni-goettingen.de>
	* bug fix in ext_emconf.php
	* added file ChangeLog
2010-10-08 - 0.0.26 - Ingo Pfennigstorf
	* Docu + Bugfix