@@ -1,3 +1,6 @@
+2010-10-15 - 0.0.26 - Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
+	* replaced deprecated ereg_replace() by preg_replace()
+
 2010-09-09 - 0.0.25 - Nils K. Windisch <windisch@sub.uni-goettingen.de>
 	* bug fix in ext_emconf.php
 	* added file ChangeLog
